Added my card information

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Aamna card START ________  -->
+        <div class="card">
+          <p class="name">Aamna</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/livmedafacologn" target="_blank">livmedafacologn</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/iamaamna12" target="_blank">iamaamna12</a>
+          </p>
+          <p class="about">Hey there! I'm Aamna, currently a software tester, aspiring to be a software developer and excited to begin my contribution journey.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.codedex.io/home" target="_blank" title="First Resource">Codédex</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="Second Resource">W3 Schools</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org" target="_blank" title="Third resource">freeCodeCamp</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Aamna card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
