--- a/index.html
+++ b/index.html
@@ -1428,6 +1428,36 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+         <!-- ________ Kevin Shah's card START ________  -->
+
+         <div class="card">
+          <p class="name">Kevin Shah</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/kevinshah108/" target="_blank">kevinshah108</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Kevinshah108" target="_blank">Kevinshah108</a>
+          </p>
+          <p class="about">I'm a passionate Software Developer and looking forward to Contribute to projects on GitHub and improving my skills. I love ❤️ watching movies and web series, stay updated with current affairs and listening music..! </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources for you 🤝</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com/js/default.asp" target="_blank" title="First Resource">W3Schools JavaScript tutorial</a>
+              </li>
+              <li>
+                <a href="https://youtu.be/M9O5AjEFzKw?si=OpcEw1yLY6PuyNk4" target="_blank" title="Second Resource">React.js Monster Class</a>
+              </li>
+              <li>
+                <a href="https://web-dev-resources.com/list/#/" target="_blank" title="Third resource">Free Web Dev Resources</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- ________________ Kevin Shah's card END ______________ -->
+
         <!-- ________ MainakSil's card START ________  -->
         <div class="card">
           <p class="name">Mainak Sil</p>
