add mariam138 card info

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ mariam138 card START ________  -->
+        <div class="card">
+          <p class="name">Mariam</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/mariam-omar-ayoub" target="_blank">mariam-omar-ayoub</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/mariam138" target="_blank">mariam138</a>
+          </p>
+          <p class="about">Hi I'm Mariam! Just getting started in the tech industry. Huge Ateez lover, Seonghwa is my ult. Obsessed with the colour purple. Dying to have a sausage dog as a pet.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://tabletomarkdown.com/" target="_blank" title="Convert your tables into markdown!">tabletomarkdown.com</a>
+              </li>
+              <li>
+                <a href="https://www.freepublicapis.com/" target="_blank" title="Some free API's to use in your code">freepublicapis.com</a>
+              </li>
+              <li>
+                <a href="https://pythontutor.com/" target="_blank" title="A visual debugger for Python, Java, C, C++ and JavaScript">pythontutor.com</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ mariam138 card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
