--- a/index.html
+++ b/index.html
@@ -115,6 +115,37 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+         <!-- ________ vatsalpb card START ________  -->
+         <div class="card">
+          <p class="name">Vatsal</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/patelbvatsal/" target="_blank">patelbvatsal</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/vatsalpb" target="_blank">vatsalpb</a>
+          </p>
+          <p class="about">A highly skilled and accomplished Principal Software Engineer with a proven track record of success 
+            in developing and maintaining complex software systems. Possesses a deep understanding of software engineering 
+            principles and a strong command of various programming languages and tools. Adept at collaborating with cross-functional 
+            teams to deliver high-quality solutions that meet customer requirements.
+            </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/microsoft/Web-Dev-For-Beginners" target="_blank" title="Web-Dev-For-Beginners">Resource 1</a>
+              </li>
+              <li>
+                <a href="https://github.com/practical-tutorials/project-based-learning" target="_blank" title="Project Based Learning">Resource 2</a>
+              </li>
+              <li>
+                <a href="https://github.com/poteto/hiring-without-whiteboards" target="_blank" title="Hiring Without Whiteboards">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ vatsalpb card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
