--- a/index.html
+++ b/index.html
@@ -114,6 +114,32 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+         <!-- ________ SaKET KUMAR's CARD START ________  -->
+        <div class="card">
+          <p class="name">SAKET KUMAR</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/@saket_28012004" target="_blank">@saket_28012004</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/https://github.com/saketkumar28" target="_blank">saketkumar28</a>
+          </p>
+          <p class="about">about you</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="First Resource">Angela yu's Udemy courses</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Second Resource">Courses from brian holt </a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Third resource">MDN docs</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
         <!-- ________ unimaria card START ________  -->
         <div class="card">
