--- a/index.html
+++ b/index.html
@@ -114,6 +114,39 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        
+        
+        <div class="grid" id="contributions">
+          <!-- ================================================ -->
+          <!-- ==================  TEMPLATE  ================== -->
+          <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
+  
+          <!-- ________ Rohan's card START ________  -->
+          <div class="card">
+            <p class="name">Rohan Patil</p>
+            <p class="contact">
+              <i class="fab fa-x-instagram"></i>
+              <a href="https://www.instagram.com/rohxnp" target="_blank">Instagram</a>
+              <i class="fab fa-github"></i>
+              <a href="https://www.github.com/rohanongithub" target="_blank">Github</a>
+            </p>
+            <p class="about">New to web development. This could just be the start, more to expect in the upcoming years</p>
+            <div class="resources">
+              <p>3 Useful Dev Resources</p>
+              <ul>
+                <li>
+                  <a href="https://www.udemy.com/share/101qYw3@wfjgTXgfscDNDDwBQATvupXbhCcnIcgY9Lul0WQLHnDDo991zLlOLB42LGXI947_Uw==/" target="_blank" title="First Resource">Udemy Full Stack Course</a>
+                </li>
+                <li>
+                  <a href="https://www.reactbits.dev/" target="_blank" title="Second Resource">React Bits for Visuals</a>
+                </li>
+                <li>
+                  <a href="https://www.duyle.dev/" target="_blank" title="Third resource">Portfolio Inspiration</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+<!-- ________ Rohan's card End ________  -->
 
         <!-- ________ unimaria card START ________  -->
         <div class="card">
