shaishav card set up

--- a/index.html
+++ b/index.html
@@ -115,6 +115,30 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- shaishav card START -->
+        <div class="card">
+          <p class="name">Shaishav</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/shaishav007" target="_blank">@shaishav007</a>
+          </p>
+          <p class="about">I am really grateful this project exists.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/watch?v=JnTPd9G6hoY" target="_blank" title="First Resource">Kevin Powell basic CSS</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=nDLb8_wgX50" target="_blank" title="Second Resource">David Goggins mindset</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=jmgsgjPn1vs" target="_blank" title="Third resource">Live Overflow on basics</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- shaishav card END  -->
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
