--- a/index.html
+++ b/index.html
@@ -90,6 +90,27 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">Dorian Alexander Tituaña Pulupa</p>
+          <p class="contact">
+            <i class="fa-solid fa-headset"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/your_user_handle" target="_blank">Your handle</a>
+          </p>
+          <p class="about">Estudiante de la carrera de ingenieria en Software de la EPN</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/topics/good-first-issue" target="_blank" title="First Resource">GitHub</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
           <p class="name">Your name</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
@@ -115,6 +136,7 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+      
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
