uncomment Third resource

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <a href="https://chatgpt.com/" target="_blank" title="Second Resource">ChatGpt</a>
               </li>
               <li>
-                <!-- <a href="https://www.w3schools.com/" target="_blank" title="Third resource">W3schools</a> -->
+                <a href="https://www.w3schools.com/" target="_blank" title="Third resource">W3schools</a>
               </li>
             </ul>
           </div>
