--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
-          <p class="name">Your name</p>
+          <p class="name">mugisha sheba</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
             <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
@@ -114,6 +114,27 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+         <!-- ________ contributor-card-sheba START ________ -->
+<div class="card">
+  <p class="name">Sheba</p>
+  <p class="contact">
+    <i class="fab fa-x-twitter"></i>
+    <a href="https://www.twitter.com/your_handle" target="_blank">sheba mugisha</a>
+    <i class="fab fa-github"></i>
+    <a href="https://www.github.com/Sheba02" target="_blank">Sheba02</a>
+  </p>
+  <p class="about">I am a Business Computing student, passionate about learning programming and contributing to open-source projects.</p>
+  <div class="resources">
+    <p>3 Useful Dev Resources</p>
+    <ul>
+      <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide" target="_blank" title="JavaScript Guide">JavaScript Guide</a></li>
+      <li><a href="https://www.freecodecamp.org/" target="_blank" title="FreeCodeCamp">FreeCodeCamp</a></li>
+      <li><a href="https://www.git-scm.com/doc" target="_blank" title="Git Documentation">Git Documentation</a></li>
+    </ul>
+  </div>
+</div>
+<!-- ________ contributor-card-sheba END ________ -->
+
 
         <!-- ________ unimaria card START ________  -->
         <div class="card">
