davi p, oliveira card
Added my card information

--- a/index.html
+++ b/index.html
@@ -115,6 +115,35 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        
+        <!-- ________ Davi P. Oliveira card START ________  -->
+        <div class="card">
+          <p class="name">Davi P. Oliveira</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">@davi-p-oliveira-11</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/davi-p-oliveira-11" target="_blank">davi-p-oliveira-11</a>
+          </p>
+          <p class="about">Full-Stack Developer | Web3 Enthusiast
+            React | Angular | Node.js (Express/Fastify/Nest) | Java (Spring Boot)</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/watch?v=6iCHf7OZn6c&list=PL6Zs6LgrJj3tDXv8a_elC6eT_4R5gfX4d" target="_blank" title="DSA Java">Data Structures and Algorithms in Java</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="Second Resource">FreeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://pll.harvard.edu/course/cs50-introduction-computer-science" target="_blank" title="Harvard  CS">CS50: Introduction to Computer Science (Harvard)</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Davi P. Oliveira card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
