Add umer-aslam card info

--- a/index.html
+++ b/index.html
@@ -1135,6 +1135,33 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+         <!-- ________ *TEMPLATE: Umer Aslam START ________  -->
+         <div class="card">
+          <p class="name">Umer Aslam</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/umer-aslam-dev/" target="_blank">Umer Aslam</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/umeraslam00" target="_blank">umeraslam00</a>
+          </p>
+          <p class="about">I am a web developer (MERN STACK) and a content writer.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="http://www.umeraslam.com/" target="_blank" title="First Resource">Umer Aslam</a>
+              </li>
+              <li>
+                <a href="https://www.npmjs.com/" target="_blank" title="Second Resource">NPM JS</a>
+              </li>
+              <li>
+                <a href="https://redux-toolkit.js.org/" target="_blank" title="Third resource">Redux Toolkit</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: Warren Smith START ________  -->
         <div class="card">
           <p class="name">Warren Smith</p>
