Revert name change and fix indentation

--- a/index.html
+++ b/index.html
@@ -81,16 +81,14 @@
 
       <div class="searchContainer">
         <input id="searchbar" type="search" name="search" placeholder="Search for your card here!" />
-      </div>
-
-      <div class="grid" id="contributions">
+      </div      <div class="grid" id="contributions">
         <!-- ================================================ -->
         <!-- ==================  TEMPLATE  ================== -->
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
-          <p class="name">mugisha sheba</p>
+          <p class="name">Your name</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
             <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
@@ -116,26 +114,25 @@
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
          <!-- ________ contributor-card-sheba START ________ -->
 <div class="card">
-  <p class="name">Sheba</p>
-  <p class="contact">
-    <i class="fab fa-x-twitter"></i>
-    <a href="https://www.twitter.com/your_handle" target="_blank">sheba mugisha</a>
-    <i class="fab fa-github"></i>
-    <a href="https://www.github.com/Sheba02" target="_blank">Sheba02</a>
-  </p>
-  <p class="about">I am a Business Computing student, passionate about learning programming and contributing to open-source projects.</p>
-  <div class="resources">
-    <p>3 Useful Dev Resources</p>
-    <ul>
-      <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide" target="_blank" title="JavaScript Guide">JavaScript Guide</a></li>
-      <li><a href="https://www.freecodecamp.org/" target="_blank" title="FreeCodeCamp">FreeCodeCamp</a></li>
-      <li><a href="https://www.git-scm.com/doc" target="_blank" title="Git Documentation">Git Documentation</a></li>
-    </ul>
-  </div>
+    <p class="name">Sheba</p>
+    <p class="contact">
+        <i class="fab fa-x-twitter"></i>
+        <a href="https://www.twitter.com/your_handle" target="_blank">sheba mugisha</a>
+        <i class="fab fa-github"></i>
+        <a href="https://www.github.com/Sheba02" target="_blank">Sheba02</a>
+    </p>
+    <p class="about">I am a Business Computing student, passionate about learning programming and contributing to open-source projects.</p>
+    <div class="resources">
+        <p>3 Useful Dev Resources</p>
+        <ul>
+            <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide" target="_blank" title="JavaScript Guide">JavaScript Guide</a></li>
+            <li><a href="https://www.freecodecamp.org/" target="_blank" title="FreeCodeCamp">FreeCodeCamp</a></li>
+            <li><a href="https://www.git-scm.com/doc" target="_blank" title="Git Documentation">Git Documentation</a></li>
+        </ul>
+    </div>
 </div>
+
 <!-- ________ contributor-card-sheba END ________ -->
-
-
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
