added arbaz93 card

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+          <!-- ________ arbaz93 card START ________  -->
+          <div class="card">
+            <p class="name">Yousaf Arbaz</p>
+            <p class="contact">
+              <i class="fa-brands fa-linkedin"></i>
+              <a href="https://www.twitter.com/your_user_handle" target="_blank">arbazyousaf</a>
+              <i class="fab fa-github"></i>
+              <a href="https://www.github.com/arbaz93" target="_blank">arbaz93</a>
+            </p>
+            <p class="about">Passionate about programming and experiencing new things!</p>
+            <div class="resources">
+              <p>3 Useful Dev Resources</p>
+              <ul>
+                <li>
+                  <a href="https://www.youtube.com/@javascriptmastery" target="_blank" title="First Resource">JS Mastery</a>
+                </li>
+                <li>
+                  <a href="https://www.frontendmentor.io/challenges" target="_blank" title="Second Resource">Front End Mentors</a>
+                </li>
+                <li>
+                  <a href="https://www.w3schools.com/" target="_blank" title="Third resource">W3Schools</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- ________ arbaz93 card END ________  -->
+           
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
