--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ sagartaunk card START ________  -->
+        <div class="card">
+          <p class="name">Sagar TAunk</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/sagartaunk2" target="_blank">sagartaunk2</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/sagartaunk" target="_blank">sagartaunk</a>
+          </p>
+          <p class="about">Am 17 years old jus started learning to code , aim to make a buttload of projects on github slowly </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="First Resource">GeeksforGeeks/a>
+              </li>
+              <li>
+                <a href="https://www.udemy.com/" target="_blank" title="Second Resource">Udemy</a>
+              </li>
+              <li>
+                <a href="https://www.xda-developers.com/" target="_blank" title="Third resource">xda-developers</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ sagartaunk card END ________  -->
+
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
