Add Paco card info

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Paco Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Paco</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="" target="_blank">No twitter :c</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Pacotacou" target="_blank">Pacotacou</a>
+          </p>
+          <p class="about">Computer and systems engineering student. I like dogs 🐕. </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="https://www.sololearn.com/" title="Good start">Sololearn</a>
+              </li>
+              <li>
+                <a href="#" target="https://www.freecodecamp.org/" title="Free certifications!">freeCodeCamp</a>
+              </li>
+              <li>
+                <a href="#" target="https://www.w3schools.com/" title="Nice docs">W3Schools</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Paco Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
