Added my contributor card to index.html

--- a/index.html
+++ b/index.html
@@ -115,6 +115,36 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Nayamat-E-Meet card START________  -->
+
+        <div class="card">
+          <p class="name">Nayamat-E-Meet</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/meet_e70532" target="_blank">@your_twitter_handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/NAYAMATVISION" target="_blank">@your_github_handle</a>
+          </p>
+          <p class="about">Aspiring AI Engineer | Passionate about Open Source | First-Year B.Tech CSE-AI Student</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://roadmap.sh" target="_blank" title="Developer Roadmaps">Roadmap.sh</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org" target="_blank" title="FreeCodeCamp">FreeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://cs50.harvard.edu/" target="_blank" title="Harvard CS50 Course">Harvard CS50</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+<!-- ________ Nayamat-E-Meet card END ________  -->
+
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
@@ -2503,6 +2533,7 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+  
         <!-- ________ JOLLYJOLLI'S CARD START ________  -->
         <div class="card">
           <p class="name">Jolly Jolli</p>
@@ -3153,7 +3184,6 @@
           </div>
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
-
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
