--- a/index.html
+++ b/index.html
@@ -1428,6 +1428,33 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+         <!-- ________ *Gobinath's card START ________  -->
+         <div class="card">
+          <p class="name">Gobinath Venkatachalam</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/vgobinathh" target="_blank">vgobinathh</a>
+          </p>
+          <p class="about">I'm a Full-Stack Developer with expertise in .NET (C#, ASP.NET Core, Microservices) and React.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://flowiseai.com/" target="_blank">Build LLM Apps
+                  Easily</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/news/css-grid-tutorial-with-cheatsheet/" target="_blank">CSS Grid</a>
+              </li>
+              <li>
+                <a href="https://tanstack.com/query/latest/docs/framework/react/overview" target="_blank" >React Query</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Gobinath's card END ________  -->
+
         <!-- ________ MainakSil's card START ________  -->
         <div class="card">
           <p class="name">Mainak Sil</p>
