--- a/index.html
+++ b/index.html
@@ -3154,6 +3154,31 @@
         </div>
         <!-- ________ aarifkhan7 card END ________  -->
 
+        <!-- ========= ASA666 card START =========   -->
+        <div class="card">
+          <p class="name">ASA666</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/ASA-666" target="_blank">ASA-666</a>
+          </p>
+          <p class="about">Cybersecurity and Network Infrastructure have been the primary areas of my interest and career aspirations!</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.geeksforgeeks.org/full-stack-developer-roadmap/" target="_blank" title="First Resource">Full-Stack Dev Roadmap</a>
+              </li>
+              <li>
+                <a href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.microverse.org/blog/introduction-to-javascript-a-guide-for-beginners&ved=2ahUKEwi9o7iS7ZiMAxUIRWcHHVT4M1UQFnoECBoQAQ&usg=AOvVaw3KDfFaiZS1kgg5rHeQ74r_" target="_blank" title="Second Resource">Guide to JavaScript</a>
+              </li>
+              <li>
+                <a href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.w3schools.com/js/&ved=2ahUKEwi9o7iS7ZiMAxUIRWcHHVT4M1UQFnoECBYQAQ&usg=AOvVaw0InYy1JO9V7729n-hfV1ti" target="_blank" title="Second Resource">JavaScript Tutorial</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ========= ASA666 card END =========   -->
+
         <!-- ========= END ========= -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
