--- a/index.html
+++ b/index.html
@@ -3172,7 +3172,7 @@
                 <a href="https://www.microverse.org/blog/introduction-to-javascript-a-guide-for-beginners" target="_blank" title="Second Resource">Guide to JavaScript</a>
               </li>
               <li>
-                <a href="https://www.google.com/url?sa=t&source=web&rct=j&opi=89978449&url=https://www.w3schools.com/js/&ved=2ahUKEwi9o7iS7ZiMAxUIRWcHHVT4M1UQFnoECBYQAQ&usg=AOvVaw0InYy1JO9V7729n-hfV1ti" target="_blank" title="Second Resource">JavaScript Tutorial</a>
+                <a href="https://www.w3schools.com/js/" target="_blank" title="Second Resource">JavaScript Tutorial</a>
               </li>
             </ul>
           </div>
