--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Veldrine Evelia Kaharwa</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/EVeldrine" target="_blank">@EVeldrine</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Tech-Vexy" target="_blank">Tech-Vexy</a>
+          </p>
+          <p class="about">I like writing code and working on projects.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://htmlrev.com/" target="_blank" title="HTMLrev">free HTML templates</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/learn/2022/responsive-web-design/" target="_blank" title="Responsive Web Design">Responsive Web Design</a>
+              </li>
+              <li>
+                <a href="https://www.theodinproject.com/" target="_blank" title="The Odin Project">The Odin Project</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
