--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ ooperinteemu card START ________  -->
+        <div class="card">
+          <p class="name">Teemu</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/" target="_blank">Link to Twitter</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/ooperinteemu" target="_blank">GitHub: ooperinteemu</a>
+          </p>
+          <p class="about">I'm a student at IT-field and I respect open source projects and privacy.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.docker.com/" target="_blank" title="Docker">Docker</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="freeCodeCamp">freeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://developer.chrome.com/docs/devtools" target="_blank" title="Chrome DevTools">Chrome DevTools</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ ooperinteemu card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
