Added a new card

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ *TEMPLATE: Divyesh172 card START ________  -->
+        <div class="card">
+          <p class="name">Divyesh Trivedi</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/Divyesh69616500" target="_blank">Divyesh69616500</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Divyesh172/" target="_blank">Divyesh172</a>
+          </p>
+          <p class="about">about you</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://skillsbuild.org/" target="_blank" title="IBM Skills Build">IBM Skills Build for certification</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="freeCodeCamp">freeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://codepen.io/" target="_blank" title="Code Pen">Code Pen</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
