Added Jivi card info

--- a/index.html
+++ b/index.html
@@ -114,6 +114,35 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+         <!-- ================================================ -->
+
+
+        <!-- ________ Jivi's card START ________  -->
+        <div class="card">
+          <p class="name">Jivi</p>
+          <p class="contact">
+            <i class="fab fa-instagram"></i>
+            <a href="https://www.instagram.com/orphic.nari/" target="_blank">Orphic nari</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Jivi-this-side" target="_blank">Jivi-this-side </a>
+          </p>
+          <p class="about"> Hey,there! Myself Jivi ~_~. Just exploring Tech world to increase the probability of my dreams to become reality! Good day and Thank you!! </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.youtube.com/watch?v=rZ41y93P2Qo&list=PL9gnSGHSqcnr_DxHsP7AW9ftq0AtAyYqJ" target="_blank" title="DSA Resource"> Kushal K - DSA (available on Youtube)</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="All over Tech stacks Resource">Free CodeCamp</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="CP to Job prep resource">GeeksforGeeks</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Jivi's card END ________  -->
 
         <!-- ________ unimaria card START ________  -->
         <div class="card">
