--- a/index.html
+++ b/index.html
@@ -150,6 +150,32 @@
           </div>
         </div>
         <!-- ________ unimaria card END ________  -->
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Mayur Lad</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/mayurlad" target="_blank">@mayurlad</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/mayurlad" target="_blank">@mayurlad</a>
+          </p>
+          <p class="about">Python Developer | AI Enthusiast | Tech Content Creator</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://developer.mozilla.org/" target="_blank" title="MDN Web Docs">MDN Web Docs</a>
+              </li>
+              <li>
+                <a href="https://roadmap.sh/" target="_blank" title="Developer Roadmaps">Developer Roadmaps</a>
+              </li>
+              <li>
+                <a href="https://realpython.com/" target="_blank" title="Real Python">Real Python</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+<!-- ________ *TEMPLATE* Contributor card END ________  -->
 
         <!-- ________ Advait Desai Card START ________  -->
         <div class="card">
