--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="column">
+          <div class="column">
           <!-- Night Mode Creation -->
           <div class="nightmode">
             <div class="toggle-box">
@@ -109,6 +109,33 @@
               </li>
               <li>
                 <a href="#" target="_blank" title="Third resource">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Vailen</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/vailensz" target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/vailenz" target="_blank">Your handle</a>
+          </p>
+          <p class="about">about you</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="First Resource">Hey I am a python dev</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Second Resource">Currently planning to become a full stack developer</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Third resource">Feel free to check my github</a>
               </li>
             </ul>
           </div>
