--- a/index.html
+++ b/index.html
@@ -114,6 +114,34 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        
+        <!-- === Paste YOUR CARD directly BELOW this line === -->
+         <!-- ________ Jonus card START ________  -->
+        <div class="card">
+          <p class="name">Jonus Green</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/JonusGreen" target="_blank">Jonus Green</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/jonusgreen" target="_blank">Jonus Green</a>
+          </p>
+          <p class="about"></p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+              </li>
+              <li>
+                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+ <!-- ________ Jonuscard end ________  -->
 
         <!-- ________ unimaria card START ________  -->
         <div class="card">
