--- a/index.html
+++ b/index.html
@@ -125,18 +125,20 @@
             <i class="fab fa-github"></i>
             <a href="https://github.com/jonusgreen" target="_blank">Jonus Green</a>
           </p>
-          <p class="about"></p>
+          <p class="about">Web Developer; Graphic Designer
+            I develop Web applications, Mobile applications, Websies, Systems and Designing flyers,
+             Banners, Business cards,Book covers , barcodes and book interior Design for KDP and others.</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+                <a href="https://jonusgreen.github.io/jonus_web/" target="_blank" title="First Resource">Resume</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+                <a href="https://www.linkedin.com/in/ashaba-jonus-235978267/" target="_blank" title="Second Resource">Linkin</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+                <a href="#" target="_blank" title="Third resource">facebook</a>
               </li>
             </ul>
           </div>
