added a new card

--- a/index.html
+++ b/index.html
@@ -115,6 +115,49 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+         <!-- ________ lakshaybxt card START ________  -->
+         <div class="card">
+          <p class="name">Lakshay Bisht</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/lakshaybxt" target="_blank">lakshaybxt</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/lakshaybxt" target="_blank">lakshaybxt</a>
+          </p>
+          <p class="about">
+            Hey!! I'm Lakshay Bisht a Java Developer enthusiasm and just trying to make a change that can bring a
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a
+                  href="https://takeuforward.org/strivers-a2z-dsa-course/strivers-a2z-dsa-course-sheet-2/"
+                  target="_blank"
+                  title="It'a very good resource to learn and practice Data Structures & Algorithms."
+                >
+                  TakeUForward
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.youtube.com/@harkirat1/videos"
+                  target="_blank"
+                  title="It's a nice YT channel for Indian folks to learn about web development."
+                >
+                  Harkirat Singh
+                </a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/@Fireship/videos" target="_blank" title="Everyone knows him.">
+                  Tech Updates
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ lakshaybxt card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
