--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Zamar443 card START ________  -->
+        <div class="card">
+          <p class="name">Zamar443</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/@phemikay" target="_blank">@phemikay</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Zamar443" target="_blank">Zamar443</a>
+          </p>
+          <p class="about"> I am a fullstack web developer still in the learning processing and this is my first open source contribution. And when i am not coding i'll either watch a movie or listen to music.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.theodinproject.com" target="_blank" title="You can learn  to become a fullstack developer from here">theodinproject</a>
+              </li>
+              <li>
+                <a href="https://bootcamp.uxdesign.cc" target="_blank" title="UXdesign Cheatsheet">uxdesign</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org" target="_blank" title="Learn Coding for free">freecodecamp</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Zamar433 card END ________  -->
+        
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
