--- a/index.html
+++ b/index.html
@@ -1441,8 +1441,7 @@
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://flowiseai.com/" target="_blank">Build LLM Apps
-                  Easily</a>
+                <a href="https://flowiseai.com/" target="_blank">Build LLM Apps Easily</a>
               </li>
               <li>
                 <a href="https://www.freecodecamp.org/news/css-grid-tutorial-with-cheatsheet/" target="_blank">CSS Grid</a>
