Add Hekkow card info

--- a/index.html
+++ b/index.html
@@ -115,6 +115,31 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ________ Hekkow card START ________  -->
+        <div class="card">
+          <p class="name">Omid Ghafori</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Hekkow" target="_blank">Hekkow</a>
+          </p>
+          <p class="about">I'm bonkers with it</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/education" target="_blank" title="GitHub Education has lots of free goodies">GitHub Education</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/" target="_blank" title="YouTube">YouTube</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/questions" target="_blank" title="Stack Overflow">Stack Overflow</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Hekkow card END ________  -->
+
         <!-- ________ unimaria card START ________  -->
         <div class="card">
           <p class="name">Maria</p>
